--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -3,5 +3,4 @@
 # Order is important! The last matching pattern takes the most precedence. #
 ############################################################################
 
-# Default owners, unless a later match takes precedence.
-* @actions/actions-oss-maintainers
+* @stroppy-io/Stroppy
